@@ -285,6 +285,9 @@ BUGFIXES:
   ZOOKEEPER-121_3. SyncRequestProcessor is not closing log stream during
   shutdown (mahadev via phunt)
 
+  ZOOKEEPER-121_4. SyncRequestProcessor is not closing log stream during
+  shutdown (mahadev via breed)
+
 IMPROVEMENTS:
   ZOOKEEPER-473. cleanup junit tests to eliminate false positives due to
   "socket reuse" and failure to close client (phunt via mahadev)
